--- a/00-HTML-CSS-basics/exercises/2-CSS/styles/style.css
+++ b/00-HTML-CSS-basics/exercises/2-CSS/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  font-size: 14px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header {
   background-color: blue;
 }
