--- a/00-HTML-CSS-basics/exercises/2-CSS/styles/style.css
+++ b/00-HTML-CSS-basics/exercises/2-CSS/styles/style.css
@@ -4,10 +4,12 @@
 }
 
 header {
+  text-align: center;
   background-color: blue;
 }
 
 footer {
+  text-align: center;
   background-color: chartreuse;
 }
 
