--- a/01-JS-DOM-APIs/style.css
+++ b/01-JS-DOM-APIs/style.css
@@ -5,6 +5,10 @@ body {
   color: white;
 }
 
+header {
+  padding: 15px;
+}
+
 section {
   text-align: center;
   color: white;
@@ -27,9 +31,13 @@ article {
   padding: 10px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.349);
-  width: 250px;
 }
 
 #joke {
   margin: 50px;
+  max-width: 200px;
+}
+
+#list-of-repositories {
+  min-width: 250px;
 }
