--- a/03-MVC-AngularJS/MyMovies/src/app/components/movie-list/movie-list.component.html
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/movie-list/movie-list.component.html
@@ -1,1 +1,9 @@
-<p>movie-list works!</p>
+<section>
+  <h2 class="section-title">My Movie list</h2>
+  <ul class="movies">
+    <li class="movie-card" *ngFor="let movie of movies">
+        <span class="badge">{{movie.id}}</span>
+        <h3 class="movie-title">{{movie.title}}</h3>
+    </li>
+  </ul>
+</section>
