--- a/03-MVC-AngularJS/MyMovies/src/styles.css
+++ b/03-MVC-AngularJS/MyMovies/src/styles.css
@@ -1,13 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Chettan+2&display=swap');
+
 body {
   margin: 0;
-  background: rgb(220, 221, 224);
+  background: #8e9eab;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 }
 
-.container {
-  justify-content: center;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  padding: 15px;
-  margin-bottom: 30px;
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-left: 15px;
+  padding-bottom: 100px;
+}
+
+.section-title {
+  font-family: 'Baloo Chettan 2', cursive;
+  color: grey;
 }
