Allow adding / editing / removing movies

--- a/03-MVC-AngularJS/MyMovies/src/app/components/dashboard/dashboard.component.html
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <section>
   <h2 class="section-title">Home</h2>
   <div class="dashboard">
-    <h3 class="fade-in" *ngIf="showMe">Welcome to MyMovies</h3>
+    <h3 class="dashboard-title fade-in">Welcome to MyMovies</h3>
+    <app-movie-search></app-movie-search>
   </div>
 </section>
