--- a/03-MVC-AngularJS/MyMovies/src/app/components/dashboard/dashboard.component.css
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/dashboard/dashboard.component.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Sen&display=swap');
 
 .dashboard {
+  color: rgb(85, 83, 83);
   text-align: center;
+}
+
+.dashboard-title {
+  font-size: 35px;
 }
 
 .fade-in {
   font-family: 'Sen', sans-serif;
-  font-size: 30px;
   animation: fadeIn ease 5s;
   -webkit-animation: fadeIn ease 5s;
   -moz-animation: fadeIn ease 5s;
