--- a/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.css
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 .card {
+  background-color: rgba(255, 255, 255, 0.822);
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   margin: 0 auto;
   width: 500px;
-  text-shadow: 1px 1px 2px black, 0 0 1em rgb(202, 201, 191), 0 0 0.2em rgb(230, 230, 230);
-  color: white;
-  font: 1.5em Georgia, "Bitstream Charter", "URW Bookman L", "Century Schoolbook L", serif;
+  color: rgb(97, 96, 96);
+  font-family: 'Roboto', sans-serif;
 }
 
 .card-img {
@@ -22,10 +24,67 @@
   padding: 2px 16px;
 }
 
+.movie-lg-input {
+  font-family: 'Roboto', sans-serif;
+  margin-left: 10px;
+  text-align: center;
+  width: 150px;
+}
+
+.movie-sm-input {
+  font-family: 'Roboto', sans-serif;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  width: 60px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.movie-sm-input::-webkit-outer-spin-button,
+.movie-sm-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.movie-sm-input {
+  -moz-appearance: textfield;
+}
+
+.buttons-container {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.movie-button {
+	box-shadow:inset 0px 34px 0px -15px #b54b3a;
+	background-color:#a73f2d;
+	border:1px solid #241d13;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:9px 23px;
+	text-decoration:none;
+  text-shadow:0px -1px 0px #7a2a1d;
+  margin: 4px;
+}
+
+.movie-button:hover {
+	background-color:#b34332;
+}
+
 @media all and (max-width: 699px) {
 
   .card {
-    width: 250px;
+    width: 330px;
+    font-size: 14px;
+  }
+
+  .movie-sm-input {
+    font-size: 12px;
+    width: 40px;
   }
 
 }
@@ -33,7 +92,13 @@
 @media all and (max-width: 699px) and (min-width: 520px) {
 
   .card {
-    width: 300px;
+    width: 350px;
+    font-size: 16px;
+  }
+
+  .movie-sm-input {
+    font-size: 12px;
+    width: 50px;
   }
 
 }
@@ -42,6 +107,12 @@
 
   .card {
     width: 400px;
+    font-size: 18px;
+  }
+
+  .movie-sm-input {
+    font-size: 12px;
+    width: 55px;
   }
 
 }
