--- a/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.html
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.html
@@ -1,17 +1,21 @@
-<section *ngIf="movie">
+<section class="movie-detail" *ngIf="movie">
   <h2 class="section-title">{{movie.title | uppercase}} Details</h2>
   <div class="card">
-    <img class="card-img" src="assets/img/movie-card.jpg" alt="Avatar">
+    <img class="card-img" [src]="movie.imageUrl">
     <div class="container">
       <h4>
         <input class="movie-lg-input" [(ngModel)]="movie.title" placeholder="Title"/>
       </h4>
-      <p>
+      <div class="movie-form-control">
         <label for="year">Year</label>
         <input class="movie-sm-input" id="year" type="number" [(ngModel)]="movie.year" placeholder="Year"/>
         <label for="duration">Duration (min)</label>
         <input class="movie-sm-input" id="duration" type="number" [(ngModel)]="movie.duration" placeholder="Duration"/>
-      </p>
+      </div>
+      <div class="movie-form-control">
+        <label for="image" class="movie-img-label">Set image (2:1 scale)</label>
+        <input type="file" class="movie-img-input" id="image" name="image" (change)="addImage($event)" />
+      </div>
     </div>
   </div>
   <div class="buttons-container">
