Added Alert Messages Component

--- a/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.css
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/movie-detail/movie-detail.component.css
@@ -114,6 +114,11 @@
 	background-color:#b34332;
 }
 
+.message-wraper {
+  width: 250px;
+  margin: 0 auto;
+}
+
 @media all and (max-width: 699px) {
 
   .card {
