--- a/03-MVC-AngularJS/MyMovies/src/app/components/alert-message/alert-message.component.css
+++ b/03-MVC-AngularJS/MyMovies/src/app/components/alert-message/alert-message.component.css
@@ -19,9 +19,9 @@
 }
 
 .clean-button:hover {
-  transform:scale(1.3,1.3);
-  -webkit-transform:scale(1.3,1.3);
-  -moz-transform:scale(1.3,1.3);
+  transform: scale(1.3, 1.3);
+  -webkit-transform: scale(1.3, 1.3);
+  -moz-transform: scale(1.3, 1.3);
   opacity: 1;
   cursor: pointer;
 }
